--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,15 @@
 {
   "name": "cef345-group-7",
   "version": "1.0.0",
+  "type":"module",
   "description": "Store codes for project",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "start": "nodemon server.js"
+  },
+  "jest": {
+    "transform": {}
   },
   "repository": {
     "type": "git",
