--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,6 +2,9 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
 name: Node.js CI
+env:
+    QA_ENV_FILE: ${{ secrets.BASE64_ENV_FILE }}
+
 
 on:
   push:
@@ -27,6 +30,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: |
+        echo $BASE64_ENV_FILE | base64 --decode > .env
         npm ci
         npm run build --if-present
         npm test
